harness/test/errors/034_nested_fn_trace.eu
inner(x): str.letters(x)
middle(x): inner(x)
outer: middle(42)
